Add spectate mode upon death

--- a/code/ui/RoleVitalsBox.html
+++ b/code/ui/RoleVitalsBox.html
@@ -5,7 +5,7 @@
         <label class="player-name" @text="PlayerName"></label>
     </div>
 
-    <div class="health-ammo-container">
+    <div class="health-ammo-container" @ref="HealthAmmoContainer">
         <div class="health-bar-container" @ref="HealthBarContainer">
             <div class="health-bar" @ref="HealthBar">
 
